nsToolkit destructor was decrementing the refcount on the global event queue handler; a prelude to stopping event handling. It now does this only if it had previously incremented the refcount: a thing done in Init, not the constructor. bug 21596. r:pinkerton,scc.